# tau-router

./: .gitignore  CITATION.cff  MANIFEST.in  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/: quickstart.py
scripts/: parse_bench_logs.py  plot_bench.py  run_multiscale_bench.sh
src/tau_lattice/: __init__.py  __main__.py  attention.py  baselines.py  core.py  nano.py
src/tau_lattice/cli/: infinite.py  nano.py
src/tau_router/: __init__.py  __main__.py  attention.py  baselines.py  core.py  nano.py
src/tau_router/cli/: infinite.py  nano.py
tests/: test_alias_imports.py  test_attention.py  test_core.py  test_nano.py
