[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tau-router"
version = "0.3.0"
description = "Tau-Router: invariant-routed long-context retrieval, basin-local attention demos, and benchmark tooling"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
  {name = "David Ames"}
]
dependencies = [
  "numpy>=1.24"
]
keywords = ["retrieval", "attention", "long-context", "number-theory", "benchmarking", "experimental"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/davidames0523/tau-router"
Repository = "https://github.com/davidames0523/tau-router"
Issues = "https://github.com/davidames0523/tau-router/issues"

[project.optional-dependencies]
torch = ["torch>=2.0"]
mlx = ["mlx>=0.20; platform_system == 'Darwin' and platform_machine == 'arm64'"]
ann = ["hnswlib>=0.8"]
dev = ["pytest>=8", "build>=1.2", "twine>=5", "ruff>=0.6"]
all = ["torch>=2.0", "hnswlib>=0.8"]

[project.scripts]
tau-infinite = "tau_lattice.cli.infinite:main"
tau-nano = "tau_lattice.cli.nano:main"
tau-router-bench = "tau_lattice.cli.infinite:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["tau_lattice*", "tau_router*"]

[tool.pytest.ini_options]
addopts = "-q"
